--- a/feathersChat/package.json
+++ b/feathersChat/package.json
@@ -46,6 +46,8 @@
     "@feathersjs/feathers": "^4.5.11",
     "@feathersjs/socketio": "^4.5.11",
     "@feathersjs/transport-commons": "^4.5.11",
+    "@google-cloud/storage": "^5.7.2",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-mongoose": "^8.3.1",
@@ -55,7 +57,10 @@
     "mongoose-attachments": "^0.1.0",
     "mongoose-attachments-aws2js": "^1.0.0",
     "mongoose-attachments-localfs": "^0.1.1",
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "serve-favicon": "^2.5.0",
+    "utils": "^0.3.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
